add html secrion

--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- START HEADER -->
+    <!-- END HEADER -->
 
+    <!-- START HERO -->
+    <!-- END HERO -->
+
+    <!-- START ABOUT -->
+    <!-- END ABOUT -->
+
+    <!-- START EXPERIENCE -->
+    <!-- END EXPERIENCE -->
+
+    <!-- START SKILLS -->
+    <!-- END SKILLS -->
+
+    <!-- START WORK -->
+    <!-- END WORK -->
+
+    <!-- START CONTACT -->
+    <!-- END CONTACT -->
+
+    <!-- START FOOTER -->
+    <!-- END FOOTER -->
 </body>
 </html>
