--- a/index.html
+++ b/index.html
@@ -37,6 +37,42 @@
 </head>
 <body>
     <!-- START HEADER -->
+    <header id="header" class="header">
+        <div class="header__logoarea" id="home">
+            <h3 class="header__logo--item">
+                Kohta<br>
+                Portfolio
+            </h3>
+        </div>
+        <div id="navArea">
+            <nav>
+                <div class="inner">
+                    <ul>
+                        <li><a href="#home">HOME<br><span class="sub__title">ホーム</span></a></li>
+                        <li><a href="#about">ABOUT<br><span class="sub__title">このサイトについて</span></a></li>
+                        <li><a href="#profile">PROFILE<br><span class="sub__title">私について</span></a></li>
+                        <li><a href="#career">CAREER<br><span class="sub__title">経歴</span></a></li>
+                        <li><a href="#works">WORKS<br><span class="sub__title">制作物</span></a></li>
+                        <li><a href="#contact">CONTACT<br><span class="sub__title">コンタクト</span></a></li>
+                    </ul>
+                    <div class="sns__btn">
+                        <ul>
+                            <li class="sns__btn--item"><a href="https://www.instagram.com/k_95.21/"><img src="./assets/img/icons/instagram (1).png" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://www.facebook.com/"><img src="./assets/img/icons/facebook (1).png" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://twitter.com/?lang=ja"><img src="./assets/img/icons/twitter (1).png" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://github.com/kohta9521"><img src="./assets/img/icons/github (1).png" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="toggle-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div id="mask"></div>
+            </div>
+    </header>
     <!-- END HEADER -->
 
     <!-- START HERO -->
@@ -59,5 +95,9 @@
 
     <!-- START FOOTER -->
     <!-- END FOOTER -->
+
+
+    <!-- JS -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
