--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <nav>
                 <div class="inner">
                     <ul>
-                        <li><a href="#home">HOME<br><span class="sub__title">ホーム</span></a></li>
-                        <li><a href="#about">ABOUT<br><span class="sub__title">このサイトについて</span></a></li>
-                        <li><a href="#profile">PROFILE<br><span class="sub__title">私について</span></a></li>
-                        <li><a href="#career">CAREER<br><span class="sub__title">経歴</span></a></li>
-                        <li><a href="#works">WORKS<br><span class="sub__title">制作物</span></a></li>
-                        <li><a href="#contact">CONTACT<br><span class="sub__title">コンタクト</span></a></li>
+                        <li><a href="#home">Home<br><span class="sub__title">ホーム</span></a></li>
+                        <li><a href="#about">01.About<br><span class="sub__title">私について</span></a></li>
+                        <li><a href="#profile">02.Experience<br><span class="sub__title">経歴について</span></a></li>
+                        <li><a href="#career">03.Skills<br><span class="sub__title">スキルについて</span></a></li>
+                        <li><a href="#works">04.Work<br><span class="sub__title">仕事について</span></a></li>
+                        <li><a href="#contact">05.Contact<br><span class="sub__title">コンタクト</span></a></li>
                     </ul>
                     <div class="sns__btn">
                         <ul>
