add header small change

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <meta name="twitter:description" content="【ページの説明】" />
     <meta name="twitter:image:src" content="【サムネイル画像のURL】" />
     <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
     <!-- css -->
     <link rel="stylesheet" href="style.css">
@@ -48,12 +51,12 @@
             <nav>
                 <div class="inner">
                     <ul>
-                        <li><a href="#home">Home<br><span class="sub__title">ホーム</span></a></li>
-                        <li><a href="#about">01.About<br><span class="sub__title">私について</span></a></li>
-                        <li><a href="#profile">02.Experience<br><span class="sub__title">経歴について</span></a></li>
-                        <li><a href="#career">03.Skills<br><span class="sub__title">スキルについて</span></a></li>
-                        <li><a href="#works">04.Work<br><span class="sub__title">仕事について</span></a></li>
-                        <li><a href="#contact">05.Contact<br><span class="sub__title">コンタクト</span></a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">01. About<br><span class="sub__title">私について</span></a></li>
+                        <li><a href="#profile">02. Experience<br><span class="sub__title">経歴について</span></a></li>
+                        <li><a href="#career">03. Skills<br><span class="sub__title">スキルについて</span></a></li>
+                        <li><a href="#works">04. Work<br><span class="sub__title">仕事について</span></a></li>
+                        <li><a href="#contact">05. Contact<br><span class="sub__title">コンタクト</span></a></li>
                     </ul>
                     <div class="sns__btn">
                         <ul>
