--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
     <!-- END HEADER -->
 
     <!-- START HERO -->
+    <section>
+        <div>
+            <div>
+                <p>Hi, my name is</p>
+                <h1>Kohta KochiM<br>I build things for the web.</h1>
+                <p>I am a software engineer specializing in building (and sometimes designing)
+                        great digital experiences on both the front and back end. I am currently interning 
+                        at several companies to improve my technical skills.
+                </p>
+                <button>Get in Touch</button>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
     <!-- END HERO -->
 
     <!-- START ABOUT -->
