add hero scss basic

--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
     <!-- END HEADER -->
 
     <!-- START HERO -->
-    <section>
-        <div>
-            <div>
-                <p>Hi, my name is</p>
-                <h1>Kohta KochiM<br>I build things for the web.</h1>
-                <p>I am a software engineer specializing in building (and sometimes designing)
+    <section class="hero">
+        <div class="hero__container">
+            <div class="hero__content">
+                <p class="hero__content--subtitle">Hi, my name is</p>
+                <h1 class="hero__content--title">Kohta KochiM<br>I build things for the web.</h1>
+                <p class="hero__content--article">I am a software engineer specializing in building (and sometimes designing)
                         great digital experiences on both the front and back end. I am currently interning 
                         at several companies to improve my technical skills.
                 </p>
-                <button>Get in Touch</button>
+                <button type="button" class="hero__content--button">Get in Touch</button>
             </div>
         </div>
     </section>
