add another font

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     <meta name="twitter:description" content="【ページの説明】" />
     <meta name="twitter:image:src" content="【サムネイル画像のURL】" />
     <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
 
     <!-- css -->
     <link rel="stylesheet" href="style.css">
@@ -82,11 +80,12 @@
     <section class="hero">
         <div class="hero__container">
             <div class="hero__content">
-                <p class="hero__content--subtitle">Hi, my name is</p>
-                <h1 class="hero__content--title">Kohta KochiM<br>I build things for the web.</h1>
-                <p class="hero__content--article">I am a software engineer specializing in building (and sometimes designing)
-                        great digital experiences on both the front and back end. I am currently interning 
-                        at several companies to improve my technical skills.
+                <p class="hero__content_subtitle">Hi, my name is</p>
+                <h1 class="hero__content_title">Kohta Kochi<br>I build things for the web.</h1>
+                <p class="hero__content--article">
+                    I am a software engineer specializing in building (and sometimes designing)<br>
+                    great digital experiences on both the front and back end. <br>
+                    I am currently interning at several companies to improve my technical skills.
                 </p>
                 <button type="button" class="hero__content--button">Get in Touch</button>
             </div>
