--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
             <div class="hero__content">
                 <p class="hero__content_subtitle">Hi, my name is</p>
                 <h1 class="hero__content_title">Kohta Kochi<br>I build things for the web.</h1>
-                <p class="hero__content--article">
+                <p class="hero__content_article">
                     I am a software engineer specializing in building (and sometimes designing)<br>
                     great digital experiences on both the front and back end. <br>
                     I am currently interning at several companies to improve my technical skills.
                 </p>
-                <button type="button" class="hero__content--button">Get in Touch</button>
+                <button class="hero__content_button">Get in Touch</button>
             </div>
         </div>
     </section>
