add background-box sizing

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                     great digital experiences on both the front and back end. <br>
                     I am currently interning at several companies to improve my technical skills.
                 </p>
-                <button class="hero__content_button">Get in Touch</button>
+                <div>
+                    <button class="hero__content_button">Get in Touch</button>
+                </div>
             </div>
         </div>
     </section>
