hero area complete

--- a/index.html
+++ b/index.html
@@ -84,13 +84,12 @@
                 <p class="hero__content_subtitle">Hi, my name is</p>
                 <h1 class="hero__content_title">Kohta Kochi<br>I build things for the web.</h1>
                 <p class="hero__content_article">
-                    I am a software engineer specializing in building (and sometimes designing)<br>
-                    great digital experiences on both the front and back end. <br>
-                    I am currently interning at several companies to improve my technical skills.
+                    This is the portfolio site of kohta, an engineer who mainly works on<br> 
+                    front-end and back-end design and implementation.He is participating in<br> 
+                    projects as an intern at several companies because his technical skills as<br> 
+                    an actual business are not yet matured.
                 </p>
-                <div>
-                    <button class="hero__content_button">Get in Touch</button>
-                </div>
+                <a href="#" class="hero__content_button">Get in Touch</a>
             </div>
         </div>
     </section>
