--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <!-- START HEADER -->
-    <header id="header" class="header">
+    <header id="header home" class="header">
         <div class="header__logoarea" id="home">
             <h3 class="header__logo--item">
                 Kohta<br>
