--- a/index.html
+++ b/index.html
@@ -138,8 +138,29 @@
     <!-- END SIDE -->
 
     <!-- START ABOUT -->
-    <section>
-        <div>
+    <section class="about" id="about">
+        <div class="about__container">
+            <div class="about__container__title">
+                <h2 class="about__container__title_item"><span>01.</span>About me</h2>
+            </div>
+            < class="about__container__main">
+                <div class="about__container__main_left">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
+                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
+                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
+                        <br>
+                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
+                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
+                    </p>
+                </div>
+                <div class="about__container__main_right"> 
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
     </section>
     <!-- END ABOUT -->
