add url and new article aboutarea

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="side">
         <ul class="side__list">
             <li class="side__list_content">
-                <a href="">
+                <a href="https://github.com/kohta9521">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" color="white">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
@@ -107,7 +107,7 @@
                 </a>
             </li>
             <li class="side__list_content">
-                <a href="">
+                <a href="https://twitter.com/kohta_piano">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" color="white">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
@@ -115,7 +115,7 @@
                 </a>
             </li>
             <li class="side__list_content">
-                <a href="">
+                <a href="https://www.instagram.com/k_95.21/">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" color="white">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <rect x="4" y="4" width="16" height="16" rx="4"></rect>
@@ -125,7 +125,7 @@
                 </a>
             </li>
             <li class="side__list_content">
-                <a href="">
+                <a href="https://www.facebook.com/profile.php?id=100023803485755">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" color="white">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
@@ -146,23 +146,21 @@
             <div class="about__container__main">
                 <div class="about__container__main_left">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
-                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
-                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
+                        I am currently a first year college student at Gakushuin University in the Law Department. 
+                        I started studying programming in the winter of my junior year of high school.
+                        I am studying and improving my technical skills every day while interacting with interns and engineers at the university.
                         <br>
                         <br>
-                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
-                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
+                        I also started my own engineering community "ENTER" exclusively for university students, 
+                        and am managing it while steadily increasing the number of members.
                         <br>
                         <br>
-                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Volup
+                        <br>
+                        My main area of work is front-end, but recently I have been working on back-end languages 
+                        and am aiming to become a person who can also work on the server side!
                         <br>
                         <br>
-                        tates enim aspernatur neque iste dolorum quia ratione est voluptate provident fuga.
+                        We hope you enjoy your visit to this site!
                     </p>
                 </div>
                 <div class="about__container__main_right"> 
@@ -174,6 +172,11 @@
     <!-- END ABOUT -->
 
     <!-- START EXPERIENCE -->
+    <section class="experience">
+        <div class="experience__container">
+
+        </div>
+    </section>
     <!-- END EXPERIENCE -->
 
     <!-- START SKILLS -->
