--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">01. About<br><span class="sub__title">私について</span></a></li>
-                        <li><a href="#profile">02. Experience<br><span class="sub__title">経歴について</span></a></li>
-                        <li><a href="#career">03. Skills<br><span class="sub__title">スキルについて</span></a></li>
-                        <li><a href="#works">04. Work<br><span class="sub__title">仕事について</span></a></li>
+                        <li><a href="#experience">02. Experience<br><span class="sub__title">経歴について</span></a></li>
+                        <li><a href="#skills">03. Skills<br><span class="sub__title">スキルについて</span></a></li>
+                        <li><a href="#work">04. Work<br><span class="sub__title">仕事について</span></a></li>
                         <li><a href="#contact">05. Contact<br><span class="sub__title">コンタクト</span></a></li>
                     </ul>
                     <div class="sns__btn">
@@ -172,23 +172,43 @@
     <!-- END ABOUT -->
 
     <!-- START EXPERIENCE -->
-    <section class="experience">
+    <section class="experience" id="experience">
         <div class="experience__container">
-
+            <h1>EXPERIENCE AREA</h1>
         </div>
     </section>
     <!-- END EXPERIENCE -->
 
     <!-- START SKILLS -->
+    <section class="skills"  id="skills">
+        <div class="skills__container">
+            <h1>SKILLS AREA</h1>
+        </div>
+    </section>
     <!-- END SKILLS -->
 
     <!-- START WORK -->
+    <section class="work" id="work">
+        <div class="work__container">
+            <h1>WORK AREA</h1>
+        </div>
+    </section>
     <!-- END WORK -->
 
     <!-- START CONTACT -->
+    <section class="contact" id="contact">
+        <div class="contact__container">
+            <h1>CONTACT AREA</h1>
+        </div>
+    </section>
     <!-- END CONTACT -->
 
     <!-- START FOOTER -->
+    <foote class="footer" id="footer">
+        <div class="footer__container">
+            <h1>FOOTER AREA</h1>
+        </div>
+    </foote>
     <!-- END FOOTER -->
 
 
