add menu var icon

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     </ul>
                     <div class="sns__btn">
                         <ul>
-                            <li class="sns__btn--item"><a href="https://www.instagram.com/k_95.21/"><img src="./assets/img/icons/instagram (1).png" alt=""></a></li>
-                            <li class="sns__btn--item"><a href="https://www.facebook.com/"><img src="./assets/img/icons/facebook (1).png" alt=""></a></li>
-                            <li class="sns__btn--item"><a href="https://twitter.com/?lang=ja"><img src="./assets/img/icons/twitter (1).png" alt=""></a></li>
-                            <li class="sns__btn--item"><a href="https://github.com/kohta9521"><img src="./assets/img/icons/github (1).png" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://www.instagram.com/k_95.21/"><img src="./assets/icon/instagram.svg" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://www.facebook.com/"><img src="./assets/icon/facebook.svg" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://twitter.com/?lang=ja"><img src="./assets/icon/twitter.svg" alt=""></a></li>
+                            <li class="sns__btn--item"><a href="https://github.com/kohta9521"><img src="./assets/icon/github.svg" alt=""></a></li>
                         </ul>
                     </div>
                 </div>
