add hero touch me button mailadress

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     projects as an intern at several companies because his technical skills as<br> 
                     an actual business are not yet matured.
                 </p>
-                <a href="#" class="hero__content_button">Get in Touch</a>
+                <a  class="hero__content_button" href="mailto:kohta0421kochi@gmail.com">Get in Touch</a>
             </div>
         </div>
     </section>
