--- a/index.html
+++ b/index.html
@@ -190,10 +190,13 @@
             <div class="skills__container__itemarea">
                 <p class="skills__container__itemarea_item">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quis itaque dolores voluptatum unde voluptatibus quod nam est, provident tempora laboriosam doloribus nostrum laudantium dolorem iusto repellat! Repudiandae, quis neque?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quis itaque dolores voluptatum unde voluptatibus quod nam est, provident tempora laboriosam doloribus nostrum laudantium dolorem iusto repellat! Repudiandae, quis neque?
                 </p>
             </div>
             <div class="skills__container__chartarea">
-                <canvas id="myRadarChart"></canvas>
+                <canvas id="myRadarChart1" class="skills__container__chhartarea_item" style="height:4px; width:15px"></canvas>
+                <canvas id="myRadarChart2" class="skills__container__chhartarea_item" style="height:4px; width:15px"></canvas>
+                <canvas id="myRadarChart3" class="skills__container__chhartarea_item" style="height:4px; width:15px"></canvas>
             </div>
             <div class="skills__container__statearea">
                 <p class="skills__container__statearea_item">
