--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                 </p>
             </div>
             <div class="skills__container__chartarea">
-                <canvas id="myRadarChart1" class="skills__container__chhartarea_item" style="height:4px; width:15px"></canvas>
-                <canvas id="myRadarChart2" class="skills__container__chhartarea_item" style="height:4px; width:15px"></canvas>
-                <canvas id="myRadarChart3" class="skills__container__chhartarea_item" style="height:4px; width:15px"></canvas>
+                <canvas id="myRadarChart1" class="skills__container__chhartarea_item" style="width: 1px;"></canvas>
+                <canvas id="myRadarChart2" class="skills__container__chhartarea_item" style="width: 1px;"></canvas>
+                <canvas id="myRadarChart3" class="skills__container__chhartarea_item" style="width: 1px;"></canvas>
             </div>
             <div class="skills__container__statearea">
                 <p class="skills__container__statearea_item">
@@ -235,7 +235,7 @@
 
     <!-- JS -->
     <script src="./js/main.js"></script>
-    <script src="./js/parts.js"></script>
+    <script src="./js/chart.js"></script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
