add new chart state

--- a/index.html
+++ b/index.html
@@ -198,6 +198,35 @@
                 <canvas id="myRadarChart2" class="skills__container__chhartarea_item" style="width: 1px;"></canvas>
                 <canvas id="myRadarChart3" class="skills__container__chhartarea_item" style="width: 1px;"></canvas>
             </div>
+            <div class="skills__container__chartmore">
+                <div class="skills__container__chartmore_item">
+                    <ul>
+                        <li>HTML　　<span>5</span></li>
+                        <li>CSS　　　<span>4</span></li>
+                        <li>SASS　　 <span>3</span></li>
+                        <li>TailwindCss　　<span>2</span></li>
+                        <li>JavaScript　　  <span>4</span></li>
+                    </ul>
+                </div>
+                <div class="skills__container__chartmore_item">
+                    <ul>
+                        <li>Go　　　<span>5</span></li>
+                        <li>Python　<span>4</span></li>
+                        <li>SQL　　 <span>3</span></li>
+                        <li>PHP　　 <span>2</span></li>
+                        <li>Java　　<span>4</span></li>
+                    </ul>
+                </div>
+                <div class="skills__container__chartmore_item">
+                    <ul>
+                        <li>React　　<span>5</span></li>
+                        <li>TypeScript　　<span>4</span></li>
+                        <li>C　　　　<span>3</span></li>
+                        <li>Swift　　 <span>2</span></li>
+                        <li>Linux　　<span>4</span></li>
+                    </ul>
+                </div>
+            </div>
             <div class="skills__container__statearea">
                 <p class="skills__container__statearea_item">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil dolorum molestiae repellendus mollitia maiores quia iure odio dignissimos autem veniam omnis nemo, consequuntur, blanditiis obcaecati assumenda provident distinctio fugiat incidunt temporibus eius sit minima praesentium voluptates. Eius magni iusto nobis.
