--- a/index.html
+++ b/index.html
@@ -239,7 +239,68 @@
     <!-- START WORK -->
     <section class="work fixed" id="work">
         <div class="work__container">
-            <h1>WORK AREA</h1>
+            <div class="work__container__title">
+                <h2 class="work__container__title_item"><span class="about__container__title_span">03.</span>Some Things I’ve Built</h2>
+            </div>
+            <div class="work__container__itemarea">
+                <!-- item1 -->
+                <div class="work__container__item1">
+                    <div class="work__container__item1_left">
+                        <img class="work__container__item1_left_img" src="" alt="">
+                    </div>
+                    <div class="work__contianer__itme1_right">
+                        <p class="work__container__item1_right_subtitle">Featured Project</p>
+                        <h2 class="work__container__item1_right_title">ENTER website</h2>
+                        <div class="work__container__item1_right_article">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis magni in aliquam cupiditate facere, modi, 
+                            nostrum accusamus debitis illo sint beatae, iure sit ad blanditiis commodi libero perferendis asperiores earum.
+                        </div>
+                        <div class="work__container__item1_right_langarea">
+                            <p class="work__container__item1_right__langarea_item">HTML/CSS</p>
+                            <p class="work__container__item1_right__langarea_item">JavaScript</p>
+                            <p class="work__container__item1_right__langarea_item"></p>
+                        </div>
+                    </div>
+                </div>
+                <!-- item2 -->
+                <div class="work__container__item2">                    
+                    <div class="work__contianer__itme2_left">
+                        <p class="work__container__item2_left_subtitle">Featured Project</p>
+                        <h2 class="work__container__item2_left_title">REGAKCORE Website</h2>
+                        <div class="work__container__item2_left_article">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis magni in aliquam cupiditate facere, modi, 
+                            nostrum accusamus debitis illo sint beatae, iure sit ad blanditiis commodi libero perferendis asperiores earum.
+                        </div>
+                        <div class="work__container__item2_left_langarea">
+                            <p class="work__container__item2_left__langarea_item">HTML/CSS</p>
+                            <p class="work__container__item2_left__langarea_item">SASS</p>
+                            <p class="work__container__item2_left__langarea_item">JavaScript</p>
+                        </div>
+                    </div>
+                    <div class="work__container__item2_right">
+                        <img class="work__container__item2_right_img" src="" alt="" >
+                    </div>
+                </div>
+                <!-- item3 -->
+                <div class="work__container__item2">                    
+                    <div class="work__contianer__itme2_left">
+                        <p class="work__container__item2_left_subtitle">Featured Project</p>
+                        <h2 class="work__container__item2_left_title">REGAKCORE Website</h2>
+                        <div class="work__container__item2_left_article">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis magni in aliquam cupiditate facere, modi, 
+                            nostrum accusamus debitis illo sint beatae, iure sit ad blanditiis commodi libero perferendis asperiores earum.
+                        </div>
+                        <div class="work__container__item2_left_langarea">
+                            <p class="work__container__item2_left__langarea_item">HTML/CSS</p>
+                            <p class="work__container__item2_left__langarea_item">SASS</p>
+                            <p class="work__container__item2_left__langarea_item">JavaScript</p>
+                        </div>
+                    </div>
+                    <div class="work__container__item2_right">
+                        <img class="work__container__item2_right_img" src="" alt="" >
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- END WORK -->
