--- a/index.html
+++ b/index.html
@@ -288,15 +288,16 @@
                     </div>                    
                     <div class="work__contianer__itme2_right">
                         <p class="work__container__item2_right_subtitle">Featured Project</p>
-                        <h2 class="work__container__item2_right_title">REGAKCORE Website</h2>
+                        <h2 class="work__container__item2_right_title">React todo APP</h2>
                         <div class="work__container__item2_right_article">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis magni in aliquam cupiditate facere, modi, 
                             nostrum accusamus debitis illo sint beatae, iure sit ad blanditiis commodi libero perferendis asperiores earum.
                         </div>
                         <div class="work__container__item2_right_langarea">
                             <p class="work__container__item2_right__langarea_item">HTML/CSS</p>
-                            <p class="work__container__item2_right__langarea_item">SASS</p>
+                            <p class="work__container__item2_right__langarea_item">React</p>
                             <p class="work__container__item2_right__langarea_item">JavaScript</p>
+                            <p class="work__container__item2_right__langarea_item">Tailwindcss</p>
                         </div>
                     </div>
                 </div>
