--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <!-- item1 -->
                 <div class="work__container__item1">
                     <div class="work__container__item1_left">
-                        <img class="work__container__item1_left_img" src="" alt="">
+                        <img class="work__container__item1_left_img" src="./assets/img/enter.png" alt="" width="450px">
                     </div>
                     <div class="work__contianer__itme1_right">
                         <p class="work__container__item1_right_subtitle">Featured Project</p>
@@ -278,13 +278,13 @@
                         </div>
                     </div>
                     <div class="work__container__item2_right">
-                        <img class="work__container__item2_right_img" src="" alt="" >
+                        <img class="work__container__item2_right_img" src="./assets/img/regal.png" alt="" width="450px">
                     </div>
                 </div>
                 <!-- item3 -->
                 <div class="work__container__item2">                    
                     <div class="work__container__item2_left">
-                        <img class="work__container__item2_left_img" src="" alt="" >
+                        <img class="work__container__item2_left_img" src="./assets/img/enter.png" alt="" width="450px">
                     </div>                    
                     <div class="work__contianer__itme2_right">
                         <p class="work__container__item2_right_subtitle">Featured Project</p>
