add new skillarea components

--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
             <div class="skills__container__title">
                 <h2 class="skills__container__title_item"><span class="about__container__title_span">02.</span>My Skills</h2>
             </div>
+            <div class="skills__container__article">
+                <p class="skills__container__article_item">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni eaque laudantium magnam iure mollitia laboriosam at vitae nobis? Voluptatibus natus vero sed magnam quidem fugiat amet, accusamus, quo ab pariatur eaque voluptas mollitia odio repellendus velit quibusdam aperiam facere?
+                </p>
+            </div>
+            <div class="skills__container__chartarea">
+                <div class="skills__container__chartarea_item" style="width: 300px;"><canvas id="skill_rader"></canvas></div>
+                <div class="skills__container__chartarea_item" style="width: 300px;"><canvas id="skill_rader"></canvas></div>
+                <div class="skills__container__chartarea_item" style="width: 300px;"><canvas id="skill_rader"></canvas></div>
+            </div>
             <div class="skills__container__itemarea">
                 <p class="skills__container__itemarea_item">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quis itaque dolores voluptatum unde voluptatibus quod nam est, provident tempora laboriosam doloribus nostrum laudantium dolorem iusto repellat! Repudiandae, quis neque?
