change lang jpanese from Engkish

--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
                 <p class="hero__content_subtitle">Hi, my name is</p>
                 <h1 class="hero__content_title">Kohta Kochi<br>I build things for the web.</h1>
                 <p class="hero__content_article">
-                    This is the portfolio site of kohta, an engineer who mainly works on<br> 
-                    front-end and back-end design and implementation.He is participating in<br> 
-                    projects as an intern at several companies because his technical skills as<br> 
-                    an actual business are not yet matured.
+                    このサイトはフロントエンド、バックエンドの設計、実装を<br>主に行うエンジニアのkohtaのポートフォリオサイトです。<br>
+                    プログラミングを独学で初め実務などの経験が少ないため<br>
+                    インターンで日々技術力の向上に励んでいます！
                 </p>
                 <a  class="hero__content_button" href="mailto:kohta0421kochi@gmail.com">Get in Touch</a>
             </div>
@@ -148,21 +147,19 @@
             <div class="about__container__main">
                 <div class="about__container__main_left">
                     <p>
-                        I am currently a first year college student at Gakushuin University in the Law Department. 
-                        I started studying programming in the winter of my junior year of high school.
-                        I am studying and improving my technical skills every day while interacting with interns and engineers at the university.
+                            私は現在、学習院大学法学部の大学1年生です。<br>
+                            プログラミングは高校3年性の冬から初めもう少しで1年が経ちます。また、
+                            大学のインターンメンバーやエンジニアと交流しながら、日々勉強し、技術力を高めています。
                         <br>
                         <br>
-                        I also started my own engineering community "ENTER" exclusively for university students, 
-                        and am managing it while steadily increasing the number of members.
+                            最近の活動として大学生専用のエンジニアコミュニティ「ENTER」を自分で立ち上げ、会員数を順調に増やしながら運営・管理をしています。
                         <br>
                         <br>
                         <br>
-                        My main area of work is front-end, but recently I have been working on back-end languages 
-                        and am aiming to become a person who can also work on the server side!
+                            フロントエンドがメインですが、最近はバックエンドの言語にも取り組んでおり、サーバーサイドもこなせる人材になることを目標にしています
                         <br>
                         <br>
-                        We hope you enjoy your visit to this site!
+                        是非このサイトを楽しんでいってください!!!
                     </p>
                 </div>
                 <div class="about__container__main_right"> 
@@ -174,11 +171,11 @@
     <!-- END ABOUT -->
 
     <!-- START EXPERIENCE -->
-    <!-- <section class="experience fixed" id="experience">
+    <section class="experience fixed" id="experience">
         <div class="experience__container">
             <h1>EXPERIENCE AREA</h1>
         </div>
-    </section> -->
+    </section>
     <!-- END EXPERIENCE -->
 
     <!-- START SKILLS -->
@@ -193,6 +190,7 @@
                 </p>
             </div>
             <div class="skills__container__chartarea">
+                
             </div>
             <div class="skills__container__itemarea">
                 <p class="skills__container__itemarea_item">
